<resources>
    <string name="app_name">Quizmania</string>
    <string name="Question">Question String</string>
    <string name="QuestionNo">#1</string>
    <string name="NextBut">Next</string>
    <string name="optionIcon">Icon for Options</string>
    <string name="optionA">OptionA string</string>
    <string name="optionB">OptionB string</string>
    <string name="optionC">OptionC string</string>
    <string name="optionD">OptionD string</string>
    <string name="launchImage">Launch Image</string>
    <string name="pick_topic">Pick a Topic!</string>
    <string name="topic1">Digital Electronics</string>
    <string name="topic2">Data Structures</string>
    <string name="topic3">Java</string>
    <string name="topic4">Cloud Computing</string>
</resources>
