<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundblue"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/pick_topic" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="8dp"
        android:layout_height="16dp"
        android:layout_gravity="start"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="#ffffff"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        card_view:cardCornerRadius="@dimen/activity_vertical_margin">

        <RadioGroup
            android:id="@+id/rg_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <RadioButton
                android:id="@+id/topic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/topic1" />

            <RadioButton
                android:id="@+id/topic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/topic2" />

            <RadioButton
                android:id="@+id/topic3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/topic3" />

            <RadioButton
                android:id="@+id/topic4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/topic4" />
        </RadioGroup>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="8dp"
        android:layout_height="16dp"
        android:layout_gravity="end"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="#ffffff"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/NextButtonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/oval"
        android:contentDescription="@string/NextBut"
        android:src="@drawable/ic_navigate_next_black_24dp" />

</LinearLayout>
